fixed defect in pagination view on mobile

--- a/src/components/Pagination/styles.css
+++ b/src/components/Pagination/styles.css
@@ -5,6 +5,8 @@
   margin-top: 20px;
   padding: 0;
   background-color: #F6F7F8;
+  position: relative;
+  z-index: 90;
 }
 
 .page-button {
